; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_file.c_read_file.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_file.c_read_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@read_file.buffer = internal global [128 x i8] zeroinitializer, align 16
@FILE_BEGIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @read_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @read_file(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @FILE_BEGIN, align 4
  %6 = call i32 @SetFilePointer(i32 %4, i32 0, i32* null, i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @ReadFile(i32 %7, i8* getelementptr inbounds ([128 x i8], [128 x i8]* @read_file.buffer, i64 0, i64 0), i32 127, i64* %3, i32* null)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i64 0, i64* %3, align 8
  br label %11

11:                                               ; preds = %10, %1
  %12 = load i64, i64* %3, align 8
  %13 = getelementptr inbounds [128 x i8], [128 x i8]* @read_file.buffer, i64 0, i64 %12
  store i8 0, i8* %13, align 1
  ret i8* getelementptr inbounds ([128 x i8], [128 x i8]* @read_file.buffer, i64 0, i64 0)
}

declare dso_local i32 @SetFilePointer(i32, i32, i32*, i32) #1

declare dso_local i32 @ReadFile(i32, i8*, i32, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
